@@ -3,7 +3,11 @@
 
 #view_data_quality
 {view_head}
-<style>.description{background-color:rgba(0,14,32,0.7);}{css}</style>
+<style>
+	.description{background-color:rgb(238,238,238); color:#444; width:880px; margin:0 auto; padding:40px; margin-bottom:3em;}
+	.title{display:block; border-bottom:1px solid #666; padding-bottom:5px; line-height:1.5em; font-size:20px;}
+	p{margin:15px 0; font-size:18px; line-height:1.35em;}
+</style>
 {beige}
 {main_head}
 {main_min}
