@@ -132,13 +132,13 @@
 			<li><a href="#gen4">{faq_general_q4_text}</a></li>
 			<li><a href="#gen5">{faq_general_q5_text}</a></li>
 			<li><a href="#gen6">{faq_general_q6_text}</a></li>
-			<li><a href="#gen13">{faq_general_q13_text}</a></li>
 			<li><a href="#gen7">{faq_general_q7_text}</a></li>
 			<li><a href="#gen8">{faq_general_q8_text}</a></li>
 			<li><a href="#gen9">{faq_general_q9_text}</a></li>
 			<li><a href="#gen10">{faq_general_q10_text}</a></li>
 			<li><a href="#gen11">{faq_general_q11_text}</a></li>
 			<li><a href="#gen12">{faq_general_q12_text}</a></li>
+			<li><a href="#gen13">{faq_general_q13_text}</a></li>
 		</ul>
 	</div>
 	
@@ -186,13 +186,6 @@
 			</span>
 		</li>
 		<li>
-			<span id="gen13"></span>
-			<span class="list">{faq_general_q13_text}</span>
-			<span class="info">
-				{faq_general_a13_text}
-			</span>
-		</li>
-		<li>
 			<span id="gen7"></span>
 			<span class="list">{faq_general_q7_text}</span>
 			<span class="info">
@@ -232,6 +225,13 @@
 			<span class="list">{faq_general_q12_text}</span>
 			<span class="info">
 				{faq_general_a12_text}
+			</span>
+		</li>
+		<li>
+			<span id="gen13"></span>
+			<span class="list">{faq_general_q13_text}</span>
+			<span class="info">
+				{faq_general_a13_text}
 			</span>
 		</li>
 	</ul>
