@@ -5,6 +5,9 @@ Update glossary for search2
 Display if reporting-org is @secondary-reporter
 Update css
 Update hierarchy filter
+Fix data_quality css
+Fix about_data link
+Fix FAQ sequence
 
 
 Development Portal (2020-06-05 shi)
